fixed overflow styling error and updated resume

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -24,6 +24,10 @@ body::-webkit-scrollbar-track {
 	border-radius: 10px;
 }
 
+.title-div {
+	overflow: hidden;
+}
+
 .no-select {
 	-webkit-tap-highlight-color: transparent;
 	-webkit-touch-callout: none;
